# PolygonRS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.csv  test.py
polygonrs/: __init__.py  options.py  stocks.py
polygonrs/data/: config.py  db.py
polygonrs/utils/: greeks.py
